<resources>
    <string name="tfcCameraParams">Camera params: %1$dx%2$d @%3$.1f fps</string>
    <string name="tfcRectSize">Rect size (pixels): %1$dx%2$d</string>
    <string name="tfcZoomArea">Zoom area (pixels): %1$dx%2$d</string>
    <string name="tfcZoomLabel">Zoom: </string>
    <string name="tfcSizeLabel">Size: </string>
    <string name="tfcRotateLabel">Rotate: </string>
    <string name="secondsOfVideo">SEC %f</string>
    <string name="nowSaving">SAVING</string>
    <string name="nowRecording">RECORDING</string>
    <string name="recordingSucceeded">REC SUCCESS</string>
    <string name="recordingFailed">REC FAILED %d</string>
    <string name="please_wait">Please wait…</string>
    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>
    <string name="myfiziqsdk_front">F R O N T</string>
    <string name="myfiziqsdk_side">S I D E</string>
    <string name="myfiziqsdk_confirm">Confirm</string>
    <string name="myfiziqsdk_cancel">Cancel</string>
    <string name="myfiziqsdk_exit">Exit</string>
    <string name="myfiziqsdk_ok">OK</string>
    <string name="myfiziqsdk_confirm_front">Confirm Front</string>
    <string name="myfiziqsdk_confirm_side">Confirm Side</string>
    <string name="myfiziqsdk_are_you_sure">Are you sure you want to exit?</string>
    <string name="myfiziqsdk_align_circles">Align Circles</string>
    <string name="myfiziqsdk_align_circles_camera_reason">You must allow camera access to the MyFiziq app to create 3D avatars.</string>
    <string name="myfiziqsdk_align_circles_nocamera">Enable Camera</string>
    <string name="myfiziqsdk_align_circles_nocamera_detail">Tap the screen to enable your camera. This is required to get your body measurements.</string>
    <string name="myfiziqsdk_align_circles_retake">Retaking Picture…</string>
    <string name="myfiziqsdk_align_circles_prepare">Prepare for Front &amp; Side pictures</string>
    <string name="myfiziqsdk_align_circles_table">Place phone upright so the front camera points at your hips.</string>
    <string name="myfiziqsdk_align_circles_ready">Prepare for front &amp; side pictures.</string>
    <string name="myfiziqsdk_align_circles_title">Alignment Help</string>
    <string name="myfiziqsdk_align_circles_help">Find a table that is about half your height. Using a cup or solid object, lean your phone against it so the circles move over each other.</string>
    <string name="myfiziqsdk_align_circles_confirm">Continue</string>
    <string name="myfiziqsdk_align_circles_exit_detail">If you exit you will not be able to create a 3D Avatar.</string>
    <string name="myfiziqsdk_confirm_detail">I confirm that I am wearing form fitting clothing and my arms &amp; legs are inside the outline.</string>
    <string name="myfiziqsdk_confirm_exit">Do you wish to exit?</string>
    <string name="myfiziqsdk_confirm_help">Confirming your image allows you to see what the camera sees before sending.</string>
    <string name="myfiziqsdk_confirm_help_title">Image Confirmation</string>
    <string name="myfiziqsdk_confirm_help_confirm">Got it, thanks!</string>
    <string name="myfiziqsdk_confirm_close_detail">You will lose your front and side avatar images if you exit.</string>
    <string name="myfiziqsdk_photos_will_not_save">Your front and side photos will not be saved.</string>
    <string name="myfiziqsdk_confirm_retake">Take again</string>
    <string name="myfiziqsdk_confirm_logout">Are you sure you want to logout?</string>
    <string name="myfiziqsdk_error_title">An error has occurred</string>
    <string name="myfiziqsdk_error_unknown">An Unknown\nError Occurred,\nPlease Try Again.</string>
    <string name="myfiziqsdk_error_detect_face">Could not detect your face, please try again.</string>
    <string name="myfiziqsdk_error_detect_body">Could not detect part of your body, please try again.</string>
    <string name="myfiziqsdk_error_camera_too_high">Please consider moving your phone to a lower position, such as a lower chair.</string>
    <string name="myfiziqsdk_error_camera_too_low">Please consider moving your phone to a higher position, such as a higher table.</string>
    <string name="myfiziqsdk_home">Home</string>
    <string name="myfiziqsdk_track">Track</string>
    <string name="myfiziqsdk_profile">Profile</string>
    <string name="myfiziqsdk_settings">Settings</string>
    <string name="error_sending_support">Error sending support data</string>
    <string name="success_sending_support">Successfully sent support data</string>
    <string name="myfiziqsdk_title_new_measurement">New Body Scan</string>
    <string name="myfiziqsdk_title_image_consent">Image Consent</string>
    <string name="myfiziqsdk_title_select_guest">Select Guest</string>
    <string name="myfiziqsdk_title_create_guest">New Guest</string>
    <string name="myfiziqsdk_title_track">Track</string>
    <string name="myfiziqsdk_track_days">DAYS</string>
    <string name="myfiziqsdk_track_weeks">WEEKS</string>
    <string name="myfiziqsdk_track_months">MONTHS</string>
    <string name="myfiziqsdk_track_select">Select</string>
    <string name="myfiziqsdk_profilelist_title">MyFiziq</string>
    <string name="new_measurement">New Measurement</string>
    <string name="myfiziqsdk_terms_of_service">Terms of Service</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="debug_menu">Debug Page</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="new_avatar">New Avatar</string>
    <string name="track">Track</string>
    <string name="view_all">View All</string>
    <string name="profile">Profile</string>
    <string name="loading_avatar">Loading Avatar…</string>
    <string name="measurements">Measurements</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="thighs">Thighs</string>
    <string name="thanks">Thanks!</string>
    <string name="info">Info</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="height_label">Height: %1$s</string>
    <string name="weight_label">Weight: %1$s</string>
    <string name="tbf_label">%1$s TBF</string>
    <string name="body_fat_indicator_underweight">Underweight</string>
    <string name="body_fat_indicator_normal">Normal</string>
    <string name="body_fat_indicator_overweight">Overweight</string>
    <string name="body_fat_indicator_obese">Obese</string>
    <string name="terms_and_conditions_text">The use of this trial application (\"app\") is subject to the terms and conditions of the signed mutual non–disclosure agreement or equivalent agreement (\"NDA\") with MyFiziq Limited of Unit 5, 71–73 South Perth Esplanade, South Perth, Western Australia, 6151 (\"MyFiziq\").\n\nTo the extent of any inconsistency between the provisions of the NDA and these Terms and Conditions, the NDA will prevail.\n\nThis app is to be used in conjunction with documentation which outlines the correct protocols and procedures when testing measurement accuracy. Please contact support@myfiziq.com if you do not have this document.\n\nWhen using the trial application, by creating or logging into an account, you acknowledge that personal information you provide including images captured will be stored on the MyFiziq Amazon Web Services (\"AWS\") cloud, and will be used for the specific purposes of:\n\n\u00A0\u00A0\u00A0\u00A0• generating a 3D model and anthropometric measurements\n\u00A0\u00A0\u00A0\u00A0• assessing the performance of the application\n\u00A0\u00A0\u00A0\u00A0• user image capture, 3D model, or anthropometric measurement support enquiries.\n\nWhere images are captured of an individual that is not the MyFiziq app account holder, you acknowledge that you have requested, received and documented the individual’s permission to capture images for the purposes mentioned above.\n\nThe English version shall always prevail in case of any discrepancy or inconsistency between English version and any translation version of the app.\n\nVer. 6</string>
    <string name="myfiziqsdk_dialog_title_no_internet">No Connection</string>
    <string name="myfiziqsdk_dialog_message_no_internet">Please connect to the internet and try again.</string>
    <string name="myfiziqsdk_image_confirmation">Image Confirmation</string>
    <string name="error_no_camera_permissions">Camera permission is needed to run this application</string>
    <string name="error_misaligned">The Phone Has\nBecome Misaligned</string>
    <string name="retrying">Retrying</string>
    <string name="myfiziqisdk_error_multiple_faces">Detected\nMultiple Faces</string>
    <string name="myfiziqisdk_error_no_face">Cannot Detect\nYour Face</string>
    <string name="myfiziqisdk_error_no_arms">Both Arms\nnot in Outline</string>
    <string name="myfiziqisdk_error_no_right_arm">Right Arm\nnot in Outline</string>
    <string name="myfiziqisdk_error_no_left_arm">Left Arm\nnot in Outline</string>
    <string name="myfiziqisdk_error_no_left_leg">Cannot Detect\nLeft Leg in Outline</string>
    <string name="myfiziqisdk_error_no_right_leg">Cannot Detect\nRight Leg in Outline</string>
    <string name="myfiziqisdk_error_no_legs_outline">Cannot Detect\nLegs in Outline</string>
    <string name="myfiziqisdk_error_no_left_arm_right_leg">Cannot Detect\nLeft Arm, Right Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_left_arm_left_leg">Cannot Detect\nLeft Arm, Left Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_right_arm_right_leg">Cannot Detect\nRight Arm, Right Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_right_arm_left_leg">Cannot Detect\nRight Arm, Left Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_arms_left_leg">Cannot Detect\nBoth Arms, Left Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_arms_right_leg">Cannot Detect\nBoth Arms, Right Leg\nin Outline</string>
    <string name="myfiziqisdk_error_no_legs_left_arm">Cannot Detect\nBoth Legs, Left Arm\nin Outline</string>
    <string name="myfiziqisdk_error_no_legs_right_arm">Cannot Detect\nBoth Legs, Right Arm\nin Outline</string>
    <string name="myfiziqisdk_error_no_arms_legs"><![CDATA[Cannot Detect\nBoth Arms & Legs\nin Outline]]></string>
    <string name="myfiziqisdk_error_no_legs">Cannot Detect\nLegs in Outline</string>
    <string name="myfiziqisdk_error_no_arms_outline">Cannot Detect\nArms in Outline</string>
    <string name="myfiziqsdk_error_logout_title">Logout failed</string>
    <string name="myfiziqsdk_error_logout_body">Failed to logout. Please try again or contact support.</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="processing_session">Processing…\nETA 30s</string>
    <string name="cancel_session">Cancel Session</string>
    <string name="sure_cancel_session">Are you sure you want to permanently cancel this session?</string>
    <string name="error_processing">There was an unknown error\nprocessing your measurements.</string>
    <string name="error_processing_timeout">The process for calculating your\nmeasurements has timed out.</string>
    <string name="error_processing_no_internet">Please check your\ninternet connection and try again.</string>
    <string name="error_processing_server_err">Server is not responding or connection\nto server timed out.</string>
    <string name="single_space">\u00A0</string>
    <string name="turn_phone_upright">Turn Phone Upright</string>
</resources>