<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:visible="false"
        android:icon="@drawable/ic_home_circle"
        android:title="@string/myfiziqsdk_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_circle"
        android:title="@string/myfiziqsdk_profile" />

    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/ic_add_measurement_circle"
        android:title="@string/new_avatar" />

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/ic_track_circle"
        android:title="@string/myfiziqsdk_track" />
    <item
        android:id="@+id/navigation_settings"
        android:visible="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/myfiziqsdk_settings" />
</menu>